# MyProjects

Bash/: SimpleMaze.sh
C/: SimpleShell(unfinished).c
Python/BeamCalculator/: beam_calculator.py  pyproject.toml
Python/BinsAndBallsSimulation/: beanzz_and_ballzz_graph.py  beanzz_and_ballzz_sim.py
Python/Fractals/: burnig_ship.py  mandelbrot.py
Python/Mastermind/: mastermindv8.py
Python/MonteCarloIntegrator/: monte_carlo_integration.py  pyproject.toml
Python/Other/: donut.py  pendulum_simulation.py
Python/SolarSystem/: pyproject.toml  solar_system.py
SQL/CompanyDB/Database/: create_database.py
SQL/CompanyDB/Database/database/: companies-schema.sql
SQL/Labs/: Lab1.sqlbook
