[tool.poetry]
name = "beamcalculator"
version = "0.1.0"
description = ""
authors = ["Michauuu <122119905+MichalJaroslawBortkiewicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
