[tool.poetry]
name = "mpis"
version = "0.1.0"
description = ""
authors = ["Michauuu <122119905+MichalJaroslawBortkiewicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
matplotlib = "^3.8.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
