[tool.poetry]
name = "solar-system"
version = "0.1.0"
description = ""
authors = ["Michauuu <122119905+MichalJaroslawBortkiewicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
